# pygamezero-examples

./: .gitpod.yml  README.md  pyproject.toml  requirements.txt
01-simple-screen/: ReadME.md
02-change-bgcolor/: ReadME.md
03-draw-line/: ReadME.md
05-draw-circle-filled/: main.py
07-draw-rectangle-filled/: main.py
09-draw-text outline/: main.py
1-simple-screen/: ReadME.md  main.py
10-draw-text-fonts/: main.py
11-moving-circle-yaxis/: main.py
12-moving-circle-xaxis/: main.py
13-moving-circle-diagonal/: main.py
14-draw-images/: main.py
15-background/: main.py
16-mouse-event/: main.py
17-mouse-left-right-click/: main.py
18-mouse-event-pos/: main.py
2-change-bgcolor/: main.py
20-keyboard-event-arrows/: main.py
20-mouse-event-pos-wheel/: main.py
21-keyboard-respond-with-letter/: main.py
22-game-background/: main.py
24-game-actors/: main.py
25-game-actor-moving/: main.py
25-game-actor-moving-loop/: main.py
3-draw-line/: main.py
4-draw-circle/: main.py
6-draw-rectangle/: main.py
8-draw-text/: main.py
