[tool.poetry]
name = "pygamezero-examples"
version = "0.1.0"
description = ""
authors = ["RAJASEKARAN S <proffraja@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^1.9.6"
pgzero = "^1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
